<resources>
    <string name="app_name">OmniStore</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_check">Check</string>
    <string name="title_settings">Settings</string>
    <string name="category_notifications">Notifications</string>
    <string name="notification_settings_summary"></string>
    <string name="notification_settings_title">Manage notifications</string>
    <string name="check_updates_summary">Will check for updated apps daily</string>
    <string name="check_updates_title">Check for updates</string>
    <string name="status_update_available">Update available</string>
    <string name="status_installed">Installed</string>
    <string name="status_not_installed">Not installed"</string>
    <string name="status_disabled">Disabled</string>
    <string name="menu_item_filter">Filter</string>
    <string name="dialog_title_network_error">Network Error</string>
    <string name="dialog_message_network_error">Network connection not available.\nPlease make sure you are connected to a network.</string>
    <string name="dialog_message_network_error_not_found">File not found.</string>
    <string name="network_error">Network error - code = %1$d</string>
    <string name="separator_item_updates">Updates</string>
    <string name="separator_item_installed">Installed</string>
    <string name="separator_item_not_installed">Not installed</string>
    <string name="notificatioon_action_stop">Stop</string>
    <string name="notification_download_title">Downloading\u2026</string>
    <string name="notification_channel_downloads">Downloads</string>
    <string name="notification_channel_updates">Updates</string>
    <string name="dialog_app_info_title">App info</string>
    <string name="dialog_app_info_pkg">Package:</string>
    <string name="dialog_app_info_name">Name:</string>
    <string name="dialog_app_info_version">Version:</string>
    <string name="dialog_app_info_update">Update:</string>
    <string name="notification_updates_title">New updates are available</string>
    <string name="notification_updates_line_one">Updated</string>
    <string name="notification_updates_line_two">New"</string>
    <string name="app_item_version">Version:</string>
    <string name="dialog_app_info_status">Status:</string>
    <string name="store_intro_title">Welcome to the OmniStore!</string>
    <string name="store_intro">The store applications are provided on an \“as is\” basis without warranties of any kind.</string>
    <string name="permission_text">Allow installing apps from OmniStore?</string>
    <string name="app_logo_image_description">App logo</string>
    <string name="app_download_image_description">Download app</string>
    <string name="app_note_image_description">Note</string>
</resources>
