<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_app_info_name"
                style="@style/TitleTextStyle" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                style="@style/BodyTextStyle" />

            <TextView
                android:id="@+id/app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                style="@style/BodyTextStyle"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dialog_app_info_pkg"
                style="@style/TitleTextStyle" />

            <TextView
                android:id="@+id/app_pkg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                style="@style/BodyTextStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dialog_app_info_version"
                style="@style/TitleTextStyle" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BodyTextStyle" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dialog_app_info_status"
                style="@style/TitleTextStyle" />

            <TextView
                android:id="@+id/app_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BodyTextStyle" />

            <TextView
                android:id="@+id/app_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dialog_app_info_update"
                style="@style/TitleTextStyle"
                android:visibility="gone" />

            <TextView
                android:id="@+id/app_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BodyTextStyle"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>