<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="?android:attr/selectableItemBackground"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="start|center_vertical"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_logo_image_description"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center_vertical"
                style="@style/BodyTextStyle" />

            <ImageView
                android:id="@+id/app_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/app_note_image_description"/>

        </LinearLayout>

        <TextView
            android:id="@+id/app_pkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            style="@style/BodyTextStyleSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            style="@style/BodyTextStyleSmall" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/app_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:indeterminateTint="?android:attr/textColorSecondary"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/app_download"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_download_outline"
        android:contentDescription="@string/app_download_image_description"/>
</LinearLayout>
